# comand-line-program

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: main.rs
